Fix text overflow

--- a/app/components/Book/Book.scss
+++ b/app/components/Book/Book.scss
@@ -10,6 +10,7 @@
   }
 
   &__image {
+    height: 190px;
     box-shadow:
      inset 0 2px 3px rgba(255, 255, 255, 0.3),
      inset 0 -2px 3px rgba(0, 0, 0, 0.3),
@@ -20,18 +21,20 @@
   &__info {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
     padding-top: 5px;
     text-align: center;
-    text-overflow: ellipsis;
     white-space: nowrap;
   }
 
   &__title {
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-size: $base-font-size;
   }
 
   &__author {
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: $medium-gray;
     font-size: $base-font-size * .85;
   }
